--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Feature</h2>
                     <h3 class="feature_comment">From product search, contact form, and new information, you can post a lot of information</h3>
-                    <h3 class="section-subheading text-muted"><a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Github"><i class="fab fa-github"></i></a>.</h3>
+                    <h3 class="section-subheading text-muted"><a class="btn btn-dark btn-social mx-2" href="https://github.com/rominamarmontel" aria-label="Github"><i class="fab fa-github"></i></a>.</h3>
                     <img class="img-fluid_top" src="assets/img/feature/feature_1.png" alt="..." />
                 </div>
                 <div class="row">
@@ -123,9 +123,9 @@
                 <div class="row align-items-center"><div class="row">
                     <div class="col-lg-12 text-lg-center text-light">Copyright &copy; VARNIER Hiromi Portfolio 2022</div>
                     <div class="col-lg-12 my-3 my-lg-10">
-                        <a class="btn btn-light btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-light btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-light btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-light btn-social mx-2" href="#!" aria-label="https://www.twitter.com/chezsagan/"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-light btn-social mx-2" href="https://www.instagram.com/chezsagan/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-light btn-social mx-2" href="https://www.linkedin.com/in/hiromi-varnier/" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     </div>
                 </div>
